--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Calculator</title>
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="calculator.css" />
+   
   </head>
   <body>
     <div
