--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
     />
-   
+   <link rel="stylesheet" href="./calculator.css" />
   </head>
   <body>
     <div
