--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Calculator</title>
     <link
       rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/bootstrap-icons/font/bootstrap-icons.min.css"
     />
    <link rel="stylesheet" href="./calculator.css" />
   </head>
