--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
@@ -38,7 +40,8 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <button class="w-100" id="back">
-              <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i>
+              De
+<!--               <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i> -->
             </button>
           </div>
         </div>
