--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/bootstrap-icons/font/bootstrap-icons.min.css"
+      href="https://CalculatorMiniProject.github.io/bootstrap-icons/font/bootstrap-icons.min.css"
     />
    <link rel="stylesheet" href="./calculator.css" />
   </head>
@@ -40,8 +40,7 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <button class="w-100" id="back">
-              De
-<!--               <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i> -->
+              <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i>
             </button>
           </div>
         </div>
