--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://CalculatorMiniProject.github.io/bootstrap-icons/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/font/bootstrap-icons.min.css"
     />
    <link rel="stylesheet" href="./calculator.css" />
   </head>
