--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <button class="w-100" id="back">
-              <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i>
+              Delete
             </button>
           </div>
         </div>
