--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/font/bootstrap-icons.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
    <link rel="stylesheet" href="./calculator.css" />
   </head>
   <body>
@@ -40,7 +37,7 @@
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
             <button class="w-100" id="back">
-              Delete
+              <i class="bi bi-arrow-90deg-left mb-2 fw-bold"></i>
             </button>
           </div>
         </div>
